<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyTracker</string>
    <string name="action_settings">Settings</string>
    <string name="tile_income">Bevétel</string>
    <string name="tile_outgo">Kiadás</string>
    <string name="tile_date">Dátumra szűrés</string>
    <string name="tile_settings">Beállítások</string>
    <string name="food">Élelmiszer</string>
    <string name="clothes">Ruházat</string>
    <string name="today">Ma</string>
    <string name="day">Napra</string>
    <string name="month">Hónapra</string>
    <string name="year">Évre</string>
    <string name="popup_title">Forrás</string>
    <string name="entertainment">Szórakozás</string>
    <string name="bills">Számlák</string>
    <string name="travel">Utazás</string>
    <string name="sport">Sport</string>
    <string name="other_outgo">Egyéb kiadás</string>
    <string name="salary">Fizetés</string>
    <string name="pocketmoney">Zsebpénz</string>
    <string name="pension">Nyugdíj</string>
    <string name="scholarship">Ösztöndíj</string>
    <string name="action_share">Megosztás</string>
    <string name="other_income">Egyéb bevétel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Mégse</string>
    <string name="atm">ATM</string>
    <string name="empty_list">Nincs adat ilyen kereséshez</string>
    <string name="sum">Összesen</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string-array name="categories_income">
        <item>@string/salary</item>
        <item>@string/pocketmoney</item>
        <item>@string/pension</item>
        <item>@string/scholarship</item>
        <item>@string/other_income</item>
    </string-array>
    <string-array name="categories_outgo">
        <item>@string/food</item>
        <item>@string/clothes</item>
        <item>@string/entertainment</item>
        <item>@string/bills</item>
        <item>@string/travel</item>
        <item>@string/sport</item>
        <item>@string/other_outgo</item>
    </string-array>
    <string-array name="default_options">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string name="title_activity_rules">Rules</string>

    <string name="hello_world">Hello world!</string>
    <string name="rule">Szabályok</string>
</resources>
