<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/food"
                        android:id="@+id/food"/>

                    <TextView
                        android:id="@+id/clothes"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/clothes"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/entertainment"
                        android:id="@+id/entertainment"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/bills"
                        android:id="@+id/bills"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/travel"
                        android:id="@+id/travel"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:id="@+id/sport"
                        android:text="@string/sport" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff0000"
                        android:padding="10dp"
                        android:text="@string/other"
                        android:id="@+id/other"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ListView
            android:id="@+id/incomeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
