<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:background="#ff13b739"
                        android:padding="10dp"
                        android:text="@string/today"
                        android:id="@+id/today"/>

                    <TextView
                        android:id="@+id/day"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:background="#ff13b739"
                        android:padding="10dp"
                        android:text="@string/day"/>


                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:background="#ff13b739"
                        android:padding="10dp"
                        android:id="@+id/month"
                        android:text="@string/month" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:background="#ff13b739"
                        android:padding="10dp"
                        android:id="@+id/year"
                        android:text="@string/year" />


                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ListView
            android:id="@+id/monthList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>