<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:id="@+id/salary"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff086212"
                        android:padding="10dp"
                        android:text="@string/salary" />

                    <TextView
                        android:id="@+id/pocketmoney"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff086212"
                        android:padding="10dp"
                        android:text="@string/pocketmoney"/>

                    <TextView
                        android:id="@+id/pension"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff086212"
                        android:padding="10dp"
                        android:text="@string/pension" />

                    <TextView
                        android:id="@+id/scholarship"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff086212"
                        android:padding="10dp"
                        android:text="@string/scholarship" />

                    <TextView
                        android:id="@+id/other"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="#ff086212"
                        android:padding="10dp"
                        android:text="@string/other" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ListView
            android:id="@+id/incomeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
